# Grid_MAPF

./: CMakeLists.txt  README.md  test.json
configs/: random-32-32-20.json
example_problems/my.domain/tasks/: random_32_32_20.tasks
example_problems/random.domain/maps/: random-32-32-20.map
example_problems/random.domain/tasks/: random_32_32_20.tasks
inc/: CompetitionSystem.h  SharedEnv.h  Simulator.h  TaskManager.h
src/: CompetitionSystem.cpp  Simulator.cpp  TaskManager.cpp  driver.cpp
